moved style to css

--- a/careCards.html
+++ b/careCards.html
@@ -1,78 +1,6 @@
 <!DOCTYPE html>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        background-color: #63264A;
-        margin: 0;
-    }
-    div {
-        height:70%;
-        margin: 0 auto;
-    }
-    .flashcard-container {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 20px;
-        justify-content: center;
-    }
+<head><link rel="stylesheet" href="careCardsStyle.css"></head>
 
-    .flashcard {
-        width: 350px;
-        height: 250px;
-        background-color: #CBEAA6;
-        color: black;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 18px;
-        border-radius: 8px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        cursor: pointer;
-        perspective: 1000px;
-    }
-
-    .flashcard-inner {
-        width: 100%;
-        height: 100%;
-        transform-style: preserve-3d;
-        transition: transform 0.6s;
-    }
-
-    .flashcard.flip .flashcard-inner {
-        transform: rotateY(180deg);
-    }
-
-    .flashcard-front,
-    .flashcard-back {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        backface-visibility: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 20px;
-        overflow: hidden;
-    }
-
-    .flashcard-back {
-        transform: rotateY(180deg);
-        background-color: #CBEAA6;
-    }
-
-</style>
-
-<!--Filtering Buttons-->
-<!--
-<button onclick="filterFruits()"> Filter for Fruits </button>
-<button onclick="filterFlower()"> Filter for Flowers</button>
-<button onclick="filterHerbs()"> Filter for Herbs</button>
-<button onclick="filterVeggie()"> Filter for Veggies</button>
-<button onclick="refresh()"> Clear Filters</button>-->
 <div class="flashcard-container">
     <!--Start of herb flashcards-->
     <div class="flashcard" onclick="flipCard(this)" id="Thyme">
