linked other html files to main.html

--- a/main.html
+++ b/main.html
@@ -35,7 +35,11 @@
       </div>
 
       <div class="dropdown">
-        <a href="#">Tips▾</a>
+        <a href="careCards.html">Activities</a>
+      </div>
+
+      <div class="dropdown">
+        <a href="tips.html">Tips▾</a>
         <div class="dropdown-content">
           <a href="#">Watering</a>
           <a href="#">Sunlight</a>
