--- a/tips.html
+++ b/tips.html
@@ -3,24 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tips-and-Tricks</title>
+    <title>Tips and Tricks</title>
 
     <style>
 
         body {
             margin: 0;
             background-color: rgb(243, 249, 210);
+            font-family: 'Garamond', serif;
+            color: #333
         }
 
-        h1 {
+        header {
+            background-color: #c0d684;
+            padding: 40px 20px 20px;
+            text-align: center;
+            border-bottom: 6px solid #a5ba65;
+        }
+
+        header h1 {
             font-family: 'Garamond';
             font-size: 40px;
             text-align: center;
             background-color: rgb(192, 214, 132);
         }
 
-        h2 {
-            font-family: 'Garamond';
+        header p {
+            font-size: 18px;
+            margin-top: 10px;
         }
 
         .nav-wrapper {
@@ -48,31 +58,69 @@
             background-color: rgba(249, 100, 209, 0.1);
         }
 
+        section {
+            padding: 40px 20px;
+            max-width: 800px;
+            margin: auto;
+        }
+
+
+        h2 {
+            text-align: center;
+            font-size: 30px;
+            margin-bottom: 15px;
+        }
+
+        a {
+            color: #006400;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
     </style>
 </head>
 <body>
-    <!-- TODO: add an intro explaing the purpose of the page-->
-    <h1>Gardening Tips</h1>
-    <p>[this is filler text for a little intro]</p>
+    <header>
+        <h1>Gardening Tips</h1>
+        <p>Simple tips to help you get the most out of your garden, indoors or out!</p>
+    </header>
 
     <nav>
         <ul>
-            <li><a href="#garden setup">Not sure how to get started?</a></li>
+            <li><a href="#garden-setup">Not sure how to get started?</a></li>
             <li><a href="#compost">Want composting tips?</a></li>
-            <li><a href="#indoor gardening">Don't have yard space?</a></li>
+            <li><a href="#indoor-gardening">Don't have yard space?</a></li>
         </ul>
       </nav>
 
     <!-- TODO: add actual information on garden setup-->
     <section id="garden setup">
-        <h2>Garden Setup &#127806</h2>
+        <h2>&#127806 Garden Setup</h2>
         <p>[this is filler text about setting up an outdoor garden]</p>
     </section>
 
-    <!-- TODO: add actual information on composting-->
     <section id="compost">
         <h2>Composting</h2>
-        <p>[this is filler text about composting]</p>
+        <dl>
+            <dt><strong>Benefits:</strong></dt>
+            <dd>
+                Composting is a resourceful way to recycle the food scraps and yard 
+                trim you generate at home all year and manage your waste more sustainably.
+            </dd>
+
+            <dt><strong>How To:</strong></dt>
+            <dd>
+                Composting can be done in your backyard by having four key components: 
+                greens (fruit and veggie scraps, crushed eggshells, and grass clippings), 
+                browns (dry leaves, untreated wood chips, shredded brown bags), air, and water. 
+                You want to avoid glossy or colored paper, dairy or meat products, and grease.
+            </dd>
+
+            <dt><strong>Resources:</strong></dt>
+            <dd><a href="https://www.epa.gov/recycle/composting-home#whycom" target="_blank">Click here to learn more about composting!</a></dd>
+        </dl>
     </section>
 
     <!-- TODO: add actual information on indoor gardening-->
